test/objects/Recipe__c.object
<CustomObject>
    <fields>
        <fullName>Dietary_Notes__c</fullName>
        <label>Dietary Notes</label>
        <picklist>
            <picklistValues>
                <fullName>Gluten Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nut / Soy Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spicy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dish__c</fullName>
        <label>Dish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prep_Ahead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prep Ahead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prep_Time__c</fullName>
        <label>Prep Time</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 30 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - 60 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 2 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 2 hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Side__c</fullName>
        <label>Side</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <formula>IMAGE(&quot;/resource/recipe_star&quot;, &quot;Star Rating&quot;) +  TEXT(Rating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Star Rating</label>
        <type>Text</type>
    </fields>
    <label>Recipe</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dish__c</columns>
        <columns>Picture__c</columns>
        <columns>Rating__c</columns>
        <columns>Prep_Time__c</columns>
        <columns>Prep_Ahead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Recipe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>